--- a/shards-protocol/package.json
+++ b/shards-protocol/package.json
@@ -7,5 +7,9 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.6.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.2.0",
+    "@0xcert/ethereum-erc721": "2.4.1"
   }
 }
